# test

./: .gitignore  CMakeLists.txt  README.md  build_windows.bat
.github/workflows/: windows-portable.yml
qml/: AppButton.qml  GlassCard.qml  LimitSelector.qml  Main.qml  MeteorOverlay.qml  MetricChip.qml  SpaceBackground.qml  Sparkline.qml  StarCounter.qml  ZoomView.qml
resources/windows/: app.rc.in
src/: OptimizerEngine.cpp  OptimizerEngine.h  PngEncoder.cpp  PngEncoder.h  TextureProcessor.cpp  TextureProcessor.h  main.cpp
tools/: create_icon.ps1
